# critters

./: .gitignore  CMakeLists.txt  Critters2.cbp  Critters2.depend  Critters2.layout  Doxyfile  Makefile  README.md  backup.sh  solutions.gpg
include/: critter.h
src/: CMakeLists.txt  Color.cpp  Color.h  Critter.cpp  Critter.h  Direction.cpp  Direction.h  Food.h  Makefile  Point.cpp  Point.h  Simulator.cpp  Simulator.h  Species.cpp  Species.h  Stone.h  View.h  ViewCurses.cpp  ViewCurses.h  ViewSDL.cpp  ViewSDL.h  add_players.cpp  add_players.h  color.cpp  color.h  critter.cpp  critter.h  direction.cpp  direction.h  food.h  game.cpp  game.h  main.cpp  olympian.h  point.cpp  point.h  sdl_clean.h  species.cpp  species.h  stone.h  (+3 more)
student-source/: CMakeLists.txt  Makefile  Olympian.h  add_players.cpp  main.cpp  olympian.h
student-source/include/: Color.h  Critter.h  ViewCurses.h
student-source/include/solutions/: Bear.h  Duck.h  Lion.h  Raccoon.h  Tiger.h  Wombat.h
